[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/boxeadora.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Boxeadora/Boxeadora1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Boxeadora/Boxeadora2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Boxeadora/Boxeadora3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Boxeadora/Boxeadora4.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "back",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 11.0741

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 128.007

[node name="boxeadora" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="enemicSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 7, 0 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="enemicColision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]


